{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 18,
  "lineage": "8777eace-00a6-ea17-9678-67d930b586cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:loadbalancer/db-lb",
            "availability_zones": [
              "eu-west-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "internal-db-lb-1797847203.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:3306",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "db-lb",
            "idle_timeout": 60,
            "internal": true,
            "listener": [
              {
                "instance_port": 3306,
                "instance_protocol": "tcp",
                "lb_port": 3306,
                "lb_protocol": "tcp"
              }
            ],
            "name": "db-lb",
            "security_groups": [
              "sg-0ebbd9b0bb6c10d4e"
            ],
            "source_security_group": "153726843398/default",
            "source_security_group_id": "sg-0ebbd9b0bb6c10d4e",
            "subnets": [
              "subnet-04c9c07e0121e4615"
            ],
            "tags": {
              "Name": "db-lb"
            },
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:loadbalancer/http-lb",
            "availability_zones": [
              "eu-west-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "http-lb-2031713698.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "http-lb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "http-lb",
            "security_groups": [
              "sg-0ebbd9b0bb6c10d4e"
            ],
            "source_security_group": "153726843398/default",
            "source_security_group_id": "sg-0ebbd9b0bb6c10d4e",
            "subnets": [
              "subnet-0dca53aa1b757bbbd"
            ],
            "tags": {
              "Name": "http-lb"
            },
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_subnet.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0dd9b6716081fd9ac",
            "owner_id": "153726843398",
            "tags": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-00daa87ec35abf789"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02904b01cf65b1d79",
            "owner_id": "153726843398",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd9b6716081fd9ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-00daa87ec35abf789"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cf2e7eb294a663c",
            "route_table_id": "rtb-02904b01cf65b1d79",
            "subnet_id": "subnet-04c9c07e0121e4615"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cd0a12b59cc728d",
            "route_table_id": "rtb-02904b01cf65b1d79",
            "subnet_id": "subnet-0dca53aa1b757bbbd"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-0e80935447366202d",
            "description": "Allow default administration service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e80935447366202d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-00daa87ec35abf789"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-0644498492632957d",
            "description": "Allow db incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0644498492632957d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-00daa87ec35abf789"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-0f031be19cebd32a8",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f031be19cebd32a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-00daa87ec35abf789"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:subnet/subnet-04c9c07e0121e4615",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-04c9c07e0121e4615",
            "map_public_ip_on_launch": false,
            "owner_id": "153726843398",
            "tags": {
              "Name": "subnet_db"
            },
            "vpc_id": "vpc-00daa87ec35abf789"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:subnet/subnet-0dca53aa1b757bbbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0dca53aa1b757bbbd",
            "map_public_ip_on_launch": false,
            "owner_id": "153726843398",
            "tags": {
              "Name": "subnet_http"
            },
            "vpc_id": "vpc-00daa87ec35abf789"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:vpc/vpc-00daa87ec35abf789",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d8439a0d70fcabdf",
            "default_route_table_id": "rtb-05817162ad79c0d37",
            "default_security_group_id": "sg-0ebbd9b0bb6c10d4e",
            "dhcp_options_id": "dopt-dc21bfba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00daa87ec35abf789",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05817162ad79c0d37",
            "owner_id": "153726843398",
            "tags": {
              "Name": "vpc_http"
            }
          }
        }
      ]
    }
  ]
}